alignment issue fixed

--- a/frontend/src/components/ItemContainer/index.scss
+++ b/frontend/src/components/ItemContainer/index.scss
@@ -6,6 +6,5 @@
     padding-bottom: 50px;
     flex-grow: 1;
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
 }
